--- a/config/TwitterStreamer.conf
+++ b/config/TwitterStreamer.conf
@@ -1,8 +1,8 @@
 #
 # Config file for the Streaming Service
 #
-username = "USERNAME!"
-password = "PASSWORD!"
+username = "helloworld40"
+password = "131420"
 
 userAgent = "StreamingClient/1.0 (compatible; Mozilla/5.0; Jakarta Commons-HttpClient/3.1 +http://github.com/acrosa/Scala-TwitterStreamer)"
 
